# ChangeLog for dev-util/diffuse
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/diffuse/ChangeLog,v 1.21 2014/01/14 13:52:27 ago Exp $

  14 Jan 2014; Agostino Sarubbo <ago@gentoo.org> diffuse-0.4.7-r1.ebuild:
  Stable for x86, wrt bug #495666

  12 Jan 2014; Pacho Ramos <pacho@gentoo.org> diffuse-0.4.7-r1.ebuild:
  amd64 stable, bug #495666

  12 Jul 2013; Fabian Groffen <grobian@gentoo.org> diffuse-0.4.7-r1.ebuild:
  Fix for Prefix, patch by igrek in bug #456720

*diffuse-0.4.7-r1 (01 Jul 2013)

  01 Jul 2013; Andrey Grozin <grozin@gentoo.org> -diffuse-0.4.7.ebuild,
  +diffuse-0.4.7-r1.ebuild:
  Fixed #406433 and #475196, many thanks to Julian Ospald <hasufell@gentoo.org>

*diffuse-0.4.7 (15 May 2013)

  15 May 2013; Andrey Grozin <grozin@gentoo.org> -diffuse-0.4.3.ebuild,
  -diffuse-0.4.4.ebuild, +diffuse-0.4.7.ebuild:
  Version bump

  24 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> diffuse-0.4.6.ebuild:
  x86 stable wrt bug #404731

  21 Feb 2012; Agostino Sarubbo <ago@gentoo.org> diffuse-0.4.6.ebuild:
  Stable for amd64, wrt bug #404731

*diffuse-0.4.6 (04 Nov 2011)

  04 Nov 2011; Andrey Grozin <grozin@gentoo.org> +diffuse-0.4.6.ebuild:
  Version bump

*diffuse-0.4.4 (03 Nov 2010)

  03 Nov 2010; Andrey Grozin <grozin@gentoo.org> +diffuse-0.4.4.ebuild:
  Version bump

  05 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> diffuse-0.4.3.ebuild:
  x86 stable wrt bug #320031

  25 May 2010; Pacho Ramos <pacho@gentoo.org> diffuse-0.4.3.ebuild:
  stable amd64, bug 320031

*diffuse-0.4.3 (16 Apr 2010)

  16 Apr 2010; Andrey Grozin <grozin@gentoo.org> -diffuse-0.4.2.ebuild,
  +diffuse-0.4.3.ebuild:
  Version bump

*diffuse-0.4.2 (13 Apr 2010)

  13 Apr 2010; Andrey Grozin <grozin@gentoo.org> +diffuse-0.4.2.ebuild:
  Version bump

  02 Mar 2010; Christian Faulhammer <fauli@gentoo.org> diffuse-0.4.1.ebuild:
  stable x86, bug 303871
