@@ -3,24 +3,16 @@ Hash: SHA256
 
 DIST diffuse-0.4.6.tar.bz2 170246 SHA256 748922902573de316a4829f1ccc2cb6fab218b4aaf69a1a4aadba7fd8f8fd916 SHA512 ddde5e6c06ecaeb9b164de47590f22074e52d32a9969764466aa09a2a24925b6fa6aa3a098816c83d4fdef34ff1d2d88eab963a3bb8de3f403e40d797d497ae6 WHIRLPOOL cc8cc5e43cf1c098a4b92f8e33c7aeb48e82bbe9ad2bf7de833ec0c29b150938e4b10c90de19d142d771bd3720d686d9d3bb4e8521311d5f4f771e273c27edce
 DIST diffuse-0.4.7.tar.bz2 189257 SHA256 b0f56acbd246f4b9a692ef51aab167134ae6650423a68d8e5f4ff4c8938f39ac SHA512 3db665ec2f05d8fd8b30f391a53e75ae0ef271d3f35f0c89f20226bda296ca46e88491a741cd3bcaa1159b9d5d2581931362ca600176b6d599351f4a34f56e2f WHIRLPOOL 3a0c382ffcb598f0d3aba8c9e45914a83d41a9f946f6cf10aab73320fdf8f6b8cc4f5f84ad6c86ca61e2ed33d00faa50d3846a560ebd4b7e9588402eefa055d2
+DIST diffuse-0.4.8.tar.bz2 557966 SHA256 c1d3b79bba9352fcb9aa4003537d3fece248fb824781c5e21f3fcccafd42df2b SHA512 0c62976526804a328f1cc1775f842e9575fab50309cc964171af5ee89d8f303d4cbdf66a078ed64bb8826f5a57c2cc7fc59afc1ee87646ece340212d34f2514e WHIRLPOOL d1f044497103c6c429f9980fa759e3df019176359adf13bd71d07c030188aad7c297a2b202290ac7124beed3536172ba17aca18d1e7a4b535218e3dd2cb015d3
 EBUILD diffuse-0.4.6.ebuild 959 SHA256 e198c8c29874fa3e850a5993c86a5a390ee3d3cc653bf4dabfc88244224953b9 SHA512 3506be3ab5e3decfd1005ddd4c1dcdc3009000a249c7476f23fcfb0defcbac8d0da68fbfacd24a833ace3d17463cbe6cbb5516154839386268607b2df3ef1728 WHIRLPOOL 72ac20e08487860fae0b0ba7fe8c198a54d07924072068f07525e7aee7aeb7ad3d6efa3e759f8f5bf3bfda71e323efdac7586669c6edde8030ca2c01ed67410d
 EBUILD diffuse-0.4.7-r1.ebuild 1328 SHA256 6382bda56741cbaa01c39747efd8735c9e076ba568b9c285321d01a30af3fe11 SHA512 1e07d539a72b0be31b44bbfb9657dc1ca76a474b088bc5e0194cd95f8b83672b9caf2374aef1667959f5fc50c4d5da02758c27b24eb83234a7cb4c85b8998343 WHIRLPOOL 1d0d1acb6b3ec54d26e8ac28ffddb4f09498b0781297061fe70c320e711a682a1531ee96677c106463c63f54ef51030a549f4a2d67d07335188b5057a10a5bcb
-MISC ChangeLog 2812 SHA256 356f14bc10fb8a54990b44a596e5887444b3d4633f02814afdb8316b289dbb6b SHA512 83cfbef424ec8f65398835886533212366169885b29359a15535fa3d6b8ae781163030040f76913bfb4fab80c7465d21ff55c749ed2a0bd56261a7225862788d WHIRLPOOL 3d4da1307ebe1818b0903e90807d675017d19a4168842fb2307360f79032bfbfcb7eea1430c9414d16edfbd5fa6f1fd86c247831ce36377a0485c56c6b0f20b2
+EBUILD diffuse-0.4.8.ebuild 1321 SHA256 29c3d553d327268c36fc64418509853f15cf442e6a0113c939b21dffb87f2dc3 SHA512 ddb95b3daebe3371578526c2406c035de348ac37e5c2f6636da237711c93995189652f1f6ba424a124177d7c4d5f4355bdbfd8c56ee2d7330bdd4f5aaaf9411a WHIRLPOOL cf6960569e623c2fa866273b558a3afe0041534eb19ed509761c1acce60fabad3270508c997e662f3d9ab1c212f2d1eb34303489b570e968afd72bb206ae7b69
+MISC ChangeLog 2937 SHA256 6ab2e399229db696c6a457a8a9691c967bde4bfe64aa22c6bddfa409ac609c57 SHA512 57f31c54a418962604ee428ee402ff5999ad7e82ccdbb99f67c8a4a5408e2e396b7badd86feb01468e33567e710824ee6328ab911029b9df21de27df13bc9340 WHIRLPOOL 560015c2302e76eae161153a0230caf39fee9520e621c6bff3b474c2f92f34d59c0dd199496c9e748c1042dba08e634830c7ef212a0d06b996e822fe39e188f9
 MISC metadata.xml 338 SHA256 958b6d00a0ebc6892dfdcb40efe99af43ef1aad31927d7b395fd2571e0bf52e4 SHA512 bdab6a68e40c8ea8a6205944d80005b278e7f916432602fdac940e9e4abad94a9b8ade81d844d83b7869fbb54622858aedf442ac9dfdeaecc351a2cab767829d WHIRLPOOL 0213a03e9e1b0c02fd4591ed1ec8a4393872522f401eb1263ae4fcade62ba7ed8f5945cdc80a29dc9f1da758b4170046958b2eb6eb7caa2319571607f3c24802
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJS1UEcAAoJELp701BxlEWf00MP/1E3o6j7R9jkCNvuKLnMvcu3
-Yd9MtTmfOypWBYBU8Fd1o9sXEs8LEvnYmK9IP1dJ9Oxv0OiuRtM8ux+O2aEnWLW7
-V2qesQMb38DTvOfZtENKL//XFY3C/8Xpf2FKK2VhZg++sj23S4sB7se9BBwm/t58
-QdurszgCuJNuZVMUW0D2fLeF6oiiNSEWE0G2E8H3rGjLvZ4IaZvWalz8iSRYaXCz
-Bcp+6fKUoSAIQgGj6jUj4Zz2jpkOkcUZ6Prmkv7YdTixedzrF0xMWYVsngy6CWVS
-tvgiSGGrzNI4jXoXJgQgrLTsArrAsTQd07HdekNZMOMf3nncNdwK2HIaDuzxXxsR
-P7yeuFo0kLzLcPQ+dOYOBeImArXK+3zxqWqJbbNkv68VUbbo3kFbg7XdSCNYoOMT
-2/yQG7o9WR6xCK7uLROWznpv0nSfjyYbPalxffJd2NoPn+GJe28kCUxY1zzBI3hx
-eSkmdX8QvRr/r1A8DsRBoCPVP5F1AdIG+VQ4O4FxzHubYySzIiNdY+qVtrf9g5TB
-BBIZvBuMEXXzJ+rTKGzb+8q11yVSwNlV4FxFDIkRaICPGWyXm6uY7FeClgVaBWrQ
-P42AaI+3+rOxPhwPFubo12NJIw1PU8amadrW7a27dWsVQ3gDaoQMbJukqmNP75Yg
-nI6KpB+Uo0RzjvTIx87z
-=uDFn
+iEYEAREIAAYFAlPvIXwACgkQso7CE7gHKw358QCg1rBa5bci8VHTTadWQ+t8c+gr
+vIgAoM5jmNtIbp2MMPamn/7vm70ZWQgS
+=UF/k
 -----END PGP SIGNATURE-----
