@@ -1,0 +1,14 @@
+DEFINED_PHASES=install postinst postrm prepare setup
+DEPEND=python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] !sci-chemistry/tinker
+DESCRIPTION=A graphical tool to compare and merge text files
+EAPI=5
+HOMEPAGE=http://diffuse.sourceforge.net/
+IUSE=python_targets_python2_7 python_single_target_python2_7
+KEYWORDS=~amd64 ~x86 ~x64-solaris
+LICENSE=GPL-2
+RDEPEND=python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-python/pygtk[python_targets_python2_7(-)?,python_single_target_python2_7(+)?]
+REQUIRED_USE=python_single_target_python2_7? ( python_targets_python2_7 ) ^^ ( python_single_target_python2_7 )
+SLOT=0
+SRC_URI=mirror://sourceforge/diffuse/diffuse-0.4.8.tar.bz2
+_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-single-r1	a71a169a881e0a11d04a7fe12dc39f6e	python-utils-r1	8c66c6dabd0295878b68b40dbd0b087b	toolchain-funcs	0f1760274637a138b99bb649202ea402
+_md5_=b3ed6cba2eb881c905c8c2d97a1a5e67
